src/snapshots/redmine_tui_draft__test_support__children_list_component_unknown_status_child.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 80, height: 5 }
00: "▌ 子 チ ケ ッ ト  2  未 完 了  2 / 完 了  0                                               " | 0:"▌" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 1:" " fg=Reset bg=Reset mod=BOLD, 2:"子" fg=Reset bg=Reset mod=BOLD, 4:"チ" fg=Reset bg=Reset mod=BOLD, 6:"ケ" fg=Reset bg=Reset mod=BOLD, 8:"ッ" fg=Reset bg=Reset mod=BOLD, 10:"ト" fg=Reset bg=Reset mod=BOLD, 12:" " fg=Reset bg=Reset mod=BOLD, 13:"2" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"未" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 18:"完" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 20:"了" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 22:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 23:"2" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 24:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 25:"/" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 26:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 27:"完" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 29:"了" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 31:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 32:"0" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
01: "                                                                                "
02: "│ #1      issue1                 進 行 中 ( user1        2025/12/09 2025/12/19 100%" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"#" fg=Blue bg=Reset mod=NONE, 3:"1" fg=Blue bg=Reset mod=NONE, 4:" " fg=Blue bg=Reset mod=NONE, 5:" " fg=Blue bg=Reset mod=NONE, 6:" " fg=Blue bg=Reset mod=NONE, 7:" " fg=Blue bg=Reset mod=NONE, 8:" " fg=Blue bg=Reset mod=NONE, 10:"i" fg=Reset bg=Reset mod=NONE, 11:"s" fg=Reset bg=Reset mod=NONE, 12:"s" fg=Reset bg=Reset mod=NONE, 13:"u" fg=Reset bg=Reset mod=NONE, 14:"e" fg=Reset bg=Reset mod=NONE, 15:"1" fg=Reset bg=Reset mod=NONE, 33:"進" fg=Reset bg=Reset mod=NONE, 35:"行" fg=Reset bg=Reset mod=NONE, 37:"中" fg=Reset bg=Reset mod=NONE, 39:"(" fg=Reset bg=Reset mod=NONE, 41:"u" fg=Blue bg=Reset mod=NONE, 42:"s" fg=Blue bg=Reset mod=NONE, 43:"e" fg=Blue bg=Reset mod=NONE, 44:"r" fg=Blue bg=Reset mod=NONE, 45:"1" fg=Blue bg=Reset mod=NONE, 46:" " fg=Blue bg=Reset mod=NONE, 47:" " fg=Blue bg=Reset mod=NONE, 48:" " fg=Blue bg=Reset mod=NONE, 49:" " fg=Blue bg=Reset mod=NONE, 50:" " fg=Blue bg=Reset mod=NONE, 51:" " fg=Blue bg=Reset mod=NONE, 52:" " fg=Blue bg=Reset mod=NONE, 54:"2" fg=Reset bg=Reset mod=NONE, 55:"0" fg=Reset bg=Reset mod=NONE, 56:"2" fg=Reset bg=Reset mod=NONE, 57:"5" fg=Reset bg=Reset mod=NONE, 58:"/" fg=Reset bg=Reset mod=NONE, 59:"1" fg=Reset bg=Reset mod=NONE, 60:"2" fg=Reset bg=Reset mod=NONE, 61:"/" fg=Reset bg=Reset mod=NONE, 62:"0" fg=Reset bg=Reset mod=NONE, 63:"9" fg=Reset bg=Reset mod=NONE, 65:"2" fg=Reset bg=Reset mod=NONE, 66:"0" fg=Reset bg=Reset mod=NONE, 67:"2" fg=Reset bg=Reset mod=NONE, 68:"5" fg=Reset bg=Reset mod=NONE, 69:"/" fg=Reset bg=Reset mod=NONE, 70:"1" fg=Reset bg=Reset mod=NONE, 71:"2" fg=Reset bg=Reset mod=NONE, 72:"/" fg=Reset bg=Reset mod=NONE, 73:"1" fg=Reset bg=Reset mod=NONE, 74:"9" fg=Reset bg=Reset mod=NONE, 76:"1" fg=Reset bg=Reset mod=NONE, 77:"0" fg=Reset bg=Reset mod=NONE, 78:"0" fg=Reset bg=Reset mod=NONE, 79:"%" fg=Reset bg=Reset mod=NONE
03: "│ #2      issue2                 (不 明 )  user1        2025/12/09 2025/12/19 100%" | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"#" fg=Blue bg=Reset mod=NONE, 3:"2" fg=Blue bg=Reset mod=NONE, 4:" " fg=Blue bg=Reset mod=NONE, 5:" " fg=Blue bg=Reset mod=NONE, 6:" " fg=Blue bg=Reset mod=NONE, 7:" " fg=Blue bg=Reset mod=NONE, 8:" " fg=Blue bg=Reset mod=NONE, 10:"i" fg=Reset bg=Reset mod=NONE, 11:"s" fg=Reset bg=Reset mod=NONE, 12:"s" fg=Reset bg=Reset mod=NONE, 13:"u" fg=Reset bg=Reset mod=NONE, 14:"e" fg=Reset bg=Reset mod=NONE, 15:"2" fg=Reset bg=Reset mod=NONE, 33:"(" fg=Reset bg=Reset mod=NONE, 34:"不" fg=Reset bg=Reset mod=NONE, 36:"明" fg=Reset bg=Reset mod=NONE, 38:")" fg=Reset bg=Reset mod=NONE, 41:"u" fg=Blue bg=Reset mod=NONE, 42:"s" fg=Blue bg=Reset mod=NONE, 43:"e" fg=Blue bg=Reset mod=NONE, 44:"r" fg=Blue bg=Reset mod=NONE, 45:"1" fg=Blue bg=Reset mod=NONE, 46:" " fg=Blue bg=Reset mod=NONE, 47:" " fg=Blue bg=Reset mod=NONE, 48:" " fg=Blue bg=Reset mod=NONE, 49:" " fg=Blue bg=Reset mod=NONE, 50:" " fg=Blue bg=Reset mod=NONE, 51:" " fg=Blue bg=Reset mod=NONE, 52:" " fg=Blue bg=Reset mod=NONE, 54:"2" fg=Reset bg=Reset mod=NONE, 55:"0" fg=Reset bg=Reset mod=NONE, 56:"2" fg=Reset bg=Reset mod=NONE, 57:"5" fg=Reset bg=Reset mod=NONE, 58:"/" fg=Reset bg=Reset mod=NONE, 59:"1" fg=Reset bg=Reset mod=NONE, 60:"2" fg=Reset bg=Reset mod=NONE, 61:"/" fg=Reset bg=Reset mod=NONE, 62:"0" fg=Reset bg=Reset mod=NONE, 63:"9" fg=Reset bg=Reset mod=NONE, 65:"2" fg=Reset bg=Reset mod=NONE, 66:"0" fg=Reset bg=Reset mod=NONE, 67:"2" fg=Reset bg=Reset mod=NONE, 68:"5" fg=Reset bg=Reset mod=NONE, 69:"/" fg=Reset bg=Reset mod=NONE, 70:"1" fg=Reset bg=Reset mod=NONE, 71:"2" fg=Reset bg=Reset mod=NONE, 72:"/" fg=Reset bg=Reset mod=NONE, 73:"1" fg=Reset bg=Reset mod=NONE, 74:"9" fg=Reset bg=Reset mod=NONE, 76:"1" fg=Reset bg=Reset mod=NONE, 77:"0" fg=Reset bg=Reset mod=NONE, 78:"0" fg=Reset bg=Reset mod=NONE, 79:"%" fg=Reset bg=Reset mod=NONE
04: "                                                                                "
