src/snapshots/redmine_tui_draft__test_support__children_mixed_option_and_status_display.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 64, height: 6 }
00: "子 チ ケ ッ ト  3 (2件 未 完 了  - 1件 完 了 )                              " | 0:"子" fg=Reset bg=Reset mod=NONE, 2:"チ" fg=Reset bg=Reset mod=NONE, 4:"ケ" fg=Reset bg=Reset mod=NONE, 6:"ッ" fg=Reset bg=Reset mod=NONE, 8:"ト" fg=Reset bg=Reset mod=NONE, 11:"3" fg=Reset bg=Reset mod=NONE, 13:"(" fg=Reset bg=Reset mod=NONE, 14:"2" fg=Reset bg=Reset mod=NONE, 15:"件" fg=Reset bg=Reset mod=NONE, 17:"未" fg=Reset bg=Reset mod=NONE, 19:"完" fg=Reset bg=Reset mod=NONE, 21:"了" fg=Reset bg=Reset mod=NONE, 24:"-" fg=Reset bg=Reset mod=NONE, 26:"1" fg=Reset bg=Reset mod=NONE, 27:"件" fg=Reset bg=Reset mod=NONE, 29:"完" fg=Reset bg=Reset mod=NONE, 31:"了" fg=Reset bg=Reset mod=NONE, 33:")" fg=Reset bg=Reset mod=NONE
01: "                                                                "
02: "#7      Done     完 了 (cl alice        2026/01/10 2026/01/15 100%" | 0:"#" fg=Gray bg=Reset mod=CROSSED_OUT, 1:"7" fg=Gray bg=Reset mod=CROSSED_OUT, 2:" " fg=Gray bg=Reset mod=CROSSED_OUT, 3:" " fg=Gray bg=Reset mod=CROSSED_OUT, 4:" " fg=Gray bg=Reset mod=CROSSED_OUT, 5:" " fg=Gray bg=Reset mod=CROSSED_OUT, 6:" " fg=Gray bg=Reset mod=CROSSED_OUT, 8:"D" fg=Reset bg=Reset mod=NONE, 9:"o" fg=Reset bg=Reset mod=NONE, 10:"n" fg=Reset bg=Reset mod=NONE, 11:"e" fg=Reset bg=Reset mod=NONE, 17:"完" fg=Reset bg=Reset mod=NONE, 19:"了" fg=Reset bg=Reset mod=NONE, 21:"(" fg=Reset bg=Reset mod=NONE, 22:"c" fg=Reset bg=Reset mod=NONE, 23:"l" fg=Reset bg=Reset mod=NONE, 25:"a" fg=Blue bg=Reset mod=NONE, 26:"l" fg=Blue bg=Reset mod=NONE, 27:"i" fg=Blue bg=Reset mod=NONE, 28:"c" fg=Blue bg=Reset mod=NONE, 29:"e" fg=Blue bg=Reset mod=NONE, 30:" " fg=Blue bg=Reset mod=NONE, 31:" " fg=Blue bg=Reset mod=NONE, 32:" " fg=Blue bg=Reset mod=NONE, 33:" " fg=Blue bg=Reset mod=NONE, 34:" " fg=Blue bg=Reset mod=NONE, 35:" " fg=Blue bg=Reset mod=NONE, 36:" " fg=Blue bg=Reset mod=NONE, 38:"2" fg=Reset bg=Reset mod=NONE, 39:"0" fg=Reset bg=Reset mod=NONE, 40:"2" fg=Reset bg=Reset mod=NONE, 41:"6" fg=Reset bg=Reset mod=NONE, 42:"/" fg=Reset bg=Reset mod=NONE, 43:"0" fg=Reset bg=Reset mod=NONE, 44:"1" fg=Reset bg=Reset mod=NONE, 45:"/" fg=Reset bg=Reset mod=NONE, 46:"1" fg=Reset bg=Reset mod=NONE, 47:"0" fg=Reset bg=Reset mod=NONE, 49:"2" fg=Reset bg=Reset mod=NONE, 50:"0" fg=Reset bg=Reset mod=NONE, 51:"2" fg=Reset bg=Reset mod=NONE, 52:"6" fg=Reset bg=Reset mod=NONE, 53:"/" fg=Reset bg=Reset mod=NONE, 54:"0" fg=Reset bg=Reset mod=NONE, 55:"1" fg=Reset bg=Reset mod=NONE, 56:"/" fg=Reset bg=Reset mod=NONE, 57:"1" fg=Reset bg=Reset mod=NONE, 58:"5" fg=Reset bg=Reset mod=NONE, 60:"1" fg=Reset bg=Reset mod=NONE, 61:"0" fg=Reset bg=Reset mod=NONE, 62:"0" fg=Reset bg=Reset mod=NONE, 63:"%" fg=Reset bg=Reset mod=NONE
03: "#8      Open     進 行 中 ( (な し )       ----/--/-- ----/--/--  35%" | 0:"#" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 1:"8" fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 2:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 3:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 4:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 5:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 6:" " fg=Blue bg=Rgb(26, 51, 34) mod=NONE, 7:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 8:"O" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 9:"p" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 10:"e" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 11:"n" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 12:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 13:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 14:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 15:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 16:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 17:"進" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 19:"行" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 21:"中" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 23:"(" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 24:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 25:"(" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 26:"な" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 28:"し" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 30:")" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 31:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 32:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 33:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 34:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 35:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 36:" " fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 37:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 38:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 39:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 40:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 41:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 42:"/" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 43:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 44:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 45:"/" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 46:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 47:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 48:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 49:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 50:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 51:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 52:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 53:"/" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 54:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 55:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 56:"/" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 57:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 58:"-" fg=Gray bg=Rgb(26, 51, 34) mod=NONE, 59:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 60:" " fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 61:"3" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 62:"5" fg=Reset bg=Rgb(26, 51, 34) mod=NONE, 63:"%" fg=Reset bg=Rgb(26, 51, 34) mod=NONE
04: "#9      Child    (不 明 )  (な し )       ----/--/-- ----/--/--   0%" | 0:"#" fg=Blue bg=Reset mod=NONE, 1:"9" fg=Blue bg=Reset mod=NONE, 2:" " fg=Blue bg=Reset mod=NONE, 3:" " fg=Blue bg=Reset mod=NONE, 4:" " fg=Blue bg=Reset mod=NONE, 5:" " fg=Blue bg=Reset mod=NONE, 6:" " fg=Blue bg=Reset mod=NONE, 8:"C" fg=Reset bg=Reset mod=NONE, 9:"h" fg=Reset bg=Reset mod=NONE, 10:"i" fg=Reset bg=Reset mod=NONE, 11:"l" fg=Reset bg=Reset mod=NONE, 12:"d" fg=Reset bg=Reset mod=NONE, 17:"(" fg=Reset bg=Reset mod=NONE, 18:"不" fg=Reset bg=Reset mod=NONE, 20:"明" fg=Reset bg=Reset mod=NONE, 22:")" fg=Reset bg=Reset mod=NONE, 25:"(" fg=Gray bg=Reset mod=NONE, 26:"な" fg=Gray bg=Reset mod=NONE, 28:"し" fg=Gray bg=Reset mod=NONE, 30:")" fg=Gray bg=Reset mod=NONE, 31:" " fg=Gray bg=Reset mod=NONE, 32:" " fg=Gray bg=Reset mod=NONE, 33:" " fg=Gray bg=Reset mod=NONE, 34:" " fg=Gray bg=Reset mod=NONE, 35:" " fg=Gray bg=Reset mod=NONE, 36:" " fg=Gray bg=Reset mod=NONE, 38:"-" fg=Gray bg=Reset mod=NONE, 39:"-" fg=Gray bg=Reset mod=NONE, 40:"-" fg=Gray bg=Reset mod=NONE, 41:"-" fg=Gray bg=Reset mod=NONE, 42:"/" fg=Gray bg=Reset mod=NONE, 43:"-" fg=Gray bg=Reset mod=NONE, 44:"-" fg=Gray bg=Reset mod=NONE, 45:"/" fg=Gray bg=Reset mod=NONE, 46:"-" fg=Gray bg=Reset mod=NONE, 47:"-" fg=Gray bg=Reset mod=NONE, 49:"-" fg=Gray bg=Reset mod=NONE, 50:"-" fg=Gray bg=Reset mod=NONE, 51:"-" fg=Gray bg=Reset mod=NONE, 52:"-" fg=Gray bg=Reset mod=NONE, 53:"/" fg=Gray bg=Reset mod=NONE, 54:"-" fg=Gray bg=Reset mod=NONE, 55:"-" fg=Gray bg=Reset mod=NONE, 56:"/" fg=Gray bg=Reset mod=NONE, 57:"-" fg=Gray bg=Reset mod=NONE, 58:"-" fg=Gray bg=Reset mod=NONE, 62:"0" fg=Reset bg=Reset mod=NONE, 63:"%" fg=Reset bg=Reset mod=NONE
05: "                                                                "
