src/snapshots/redmine_tui_draft__test_support__children_unloaded_child_display.snap
---
source: src/test_support.rs
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 80, height: 4 }
00: "▌ 子 チ ケ ッ ト  1  未 完 了  1 / 完 了  0                                               " | 0:"▌" fg=Rgb(122, 162, 247) bg=Reset mod=NONE, 1:" " fg=Reset bg=Reset mod=BOLD, 2:"子" fg=Reset bg=Reset mod=BOLD, 4:"チ" fg=Reset bg=Reset mod=BOLD, 6:"ケ" fg=Reset bg=Reset mod=BOLD, 8:"ッ" fg=Reset bg=Reset mod=BOLD, 10:"ト" fg=Reset bg=Reset mod=BOLD, 12:" " fg=Reset bg=Reset mod=BOLD, 13:"1" fg=Rgb(122, 162, 247) bg=Reset mod=BOLD, 14:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 15:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 16:"未" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 18:"完" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 20:"了" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 22:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 23:"1" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 24:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 25:"/" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 26:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 27:"完" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 29:"了" fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 31:" " fg=Rgb(128, 138, 158) bg=Reset mod=NONE, 32:"0" fg=Rgb(128, 138, 158) bg=Reset mod=NONE
01: "                                                                                "
02: "│ #4      Unloaded child         未 取 得                                          " | 0:"│" fg=Rgb(74, 83, 102) bg=Reset mod=NONE, 2:"#" fg=Blue bg=Reset mod=NONE, 3:"4" fg=Blue bg=Reset mod=NONE, 4:" " fg=Blue bg=Reset mod=NONE, 5:" " fg=Blue bg=Reset mod=NONE, 6:" " fg=Blue bg=Reset mod=NONE, 7:" " fg=Blue bg=Reset mod=NONE, 8:" " fg=Blue bg=Reset mod=NONE, 10:"U" fg=Reset bg=Reset mod=NONE, 11:"n" fg=Reset bg=Reset mod=NONE, 12:"l" fg=Reset bg=Reset mod=NONE, 13:"o" fg=Reset bg=Reset mod=NONE, 14:"a" fg=Reset bg=Reset mod=NONE, 15:"d" fg=Reset bg=Reset mod=NONE, 16:"e" fg=Reset bg=Reset mod=NONE, 17:"d" fg=Reset bg=Reset mod=NONE, 19:"c" fg=Reset bg=Reset mod=NONE, 20:"h" fg=Reset bg=Reset mod=NONE, 21:"i" fg=Reset bg=Reset mod=NONE, 22:"l" fg=Reset bg=Reset mod=NONE, 23:"d" fg=Reset bg=Reset mod=NONE, 33:"未" fg=Gray bg=Reset mod=NONE, 35:"取" fg=Gray bg=Reset mod=NONE, 37:"得" fg=Gray bg=Reset mod=NONE, 39:" " fg=Gray bg=Reset mod=NONE
03: "                                                                                "
