src/snapshots/redmine_tui_draft__test_support__comment_journal_markdown_wrap.snap
---
source: src/test_support.rs
assertion_line: 28
expression: describe_buffer(terminal.backend().buffer())
---
area=Rect { x: 0, y: 0, width: 20, height: 7 }
00: "aliceが 2026/01/15に  " | 0:"a" fg=Blue bg=Reset mod=NONE, 1:"l" fg=Blue bg=Reset mod=NONE, 2:"i" fg=Blue bg=Reset mod=NONE, 3:"c" fg=Blue bg=Reset mod=NONE, 4:"e" fg=Blue bg=Reset mod=NONE, 5:"が" fg=Reset bg=Reset mod=NONE, 7:"2" fg=Blue bg=Reset mod=NONE, 8:"0" fg=Blue bg=Reset mod=NONE, 9:"2" fg=Blue bg=Reset mod=NONE, 10:"6" fg=Blue bg=Reset mod=NONE, 11:"/" fg=Blue bg=Reset mod=NONE, 12:"0" fg=Blue bg=Reset mod=NONE, 13:"1" fg=Blue bg=Reset mod=NONE, 14:"/" fg=Blue bg=Reset mod=NONE, 15:"1" fg=Blue bg=Reset mod=NONE, 16:"5" fg=Blue bg=Reset mod=NONE, 17:"に" fg=Reset bg=Reset mod=NONE
01: "                    "
02: "comment body with   " | 0:"c" fg=Reset bg=Reset mod=NONE, 1:"o" fg=Reset bg=Reset mod=NONE, 2:"m" fg=Reset bg=Reset mod=NONE, 3:"m" fg=Reset bg=Reset mod=NONE, 4:"e" fg=Reset bg=Reset mod=NONE, 5:"n" fg=Reset bg=Reset mod=NONE, 6:"t" fg=Reset bg=Reset mod=NONE, 8:"b" fg=Reset bg=Reset mod=NONE, 9:"o" fg=Reset bg=Reset mod=NONE, 10:"d" fg=Reset bg=Reset mod=NONE, 11:"y" fg=Reset bg=Reset mod=NONE, 13:"w" fg=Reset bg=Reset mod=NONE, 14:"i" fg=Reset bg=Reset mod=NONE, 15:"t" fg=Reset bg=Reset mod=NONE, 16:"h" fg=Reset bg=Reset mod=NONE
03: "bold, italic, and   " | 0:"b" fg=Reset bg=Reset mod=BOLD, 1:"o" fg=Reset bg=Reset mod=BOLD, 2:"l" fg=Reset bg=Reset mod=BOLD, 3:"d" fg=Reset bg=Reset mod=BOLD, 4:"," fg=Reset bg=Reset mod=NONE, 6:"i" fg=Reset bg=Reset mod=ITALIC, 7:"t" fg=Reset bg=Reset mod=ITALIC, 8:"a" fg=Reset bg=Reset mod=ITALIC, 9:"l" fg=Reset bg=Reset mod=ITALIC, 10:"i" fg=Reset bg=Reset mod=ITALIC, 11:"c" fg=Reset bg=Reset mod=ITALIC, 12:"," fg=Reset bg=Reset mod=NONE, 14:"a" fg=Reset bg=Reset mod=NONE, 15:"n" fg=Reset bg=Reset mod=NONE, 16:"d" fg=Reset bg=Reset mod=NONE
04: "link                " | 0:"l" fg=Reset bg=Reset mod=NONE, 1:"i" fg=Reset bg=Reset mod=NONE, 2:"n" fg=Reset bg=Reset mod=NONE, 3:"k" fg=Reset bg=Reset mod=NONE
05: "(https://example.com" | 0:"(" fg=Reset bg=Reset mod=NONE, 1:"h" fg=Blue bg=Reset mod=UNDERLINED, 2:"t" fg=Blue bg=Reset mod=UNDERLINED, 3:"t" fg=Blue bg=Reset mod=UNDERLINED, 4:"p" fg=Blue bg=Reset mod=UNDERLINED, 5:"s" fg=Blue bg=Reset mod=UNDERLINED, 6:":" fg=Blue bg=Reset mod=UNDERLINED, 7:"/" fg=Blue bg=Reset mod=UNDERLINED, 8:"/" fg=Blue bg=Reset mod=UNDERLINED, 9:"e" fg=Blue bg=Reset mod=UNDERLINED, 10:"x" fg=Blue bg=Reset mod=UNDERLINED, 11:"a" fg=Blue bg=Reset mod=UNDERLINED, 12:"m" fg=Blue bg=Reset mod=UNDERLINED, 13:"p" fg=Blue bg=Reset mod=UNDERLINED, 14:"l" fg=Blue bg=Reset mod=UNDERLINED, 15:"e" fg=Blue bg=Reset mod=UNDERLINED, 16:"." fg=Blue bg=Reset mod=UNDERLINED, 17:"c" fg=Blue bg=Reset mod=UNDERLINED, 18:"o" fg=Blue bg=Reset mod=UNDERLINED, 19:"m" fg=Blue bg=Reset mod=UNDERLINED
06: ") that wraps.       " | 0:")" fg=Reset bg=Reset mod=NONE, 2:"t" fg=Reset bg=Reset mod=NONE, 3:"h" fg=Reset bg=Reset mod=NONE, 4:"a" fg=Reset bg=Reset mod=NONE, 5:"t" fg=Reset bg=Reset mod=NONE, 7:"w" fg=Reset bg=Reset mod=NONE, 8:"r" fg=Reset bg=Reset mod=NONE, 9:"a" fg=Reset bg=Reset mod=NONE, 10:"p" fg=Reset bg=Reset mod=NONE, 11:"s" fg=Reset bg=Reset mod=NONE, 12:"." fg=Reset bg=Reset mod=NONE
